# whispers

./: .dockerignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE_NOTES.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build.yml  commit.yml  compile.yml  publish.yml  release-binary.yml  release-pypi.yml  release.yml
tests/configs/: example_rules.yml  exclude_values.yml  inline_rule.yml  integration.yml
tests/fixtures/: .npmrc  Groups.xml  apikeys-known.yml  apikeys.json  apikeys.xml  apikeys.yml  arn.xml  arn.yml  aws.json  aws.xml  aws.yml  build.gradle  creditcards.yml  custom.yml  falsepositive.yml  hardcoded.json  hardcoded.xml  hardcoded.yml  invalid.ini  invalid.py  invalid.yml  language.sh  nginx.conf  passwords.json  passwords.xml  passwords.yml  paths.yml  private-pgp-block.txt  privatekey.pem  putty.ppk  runtime.exs  script.sh  settings01.ini  settings02.ini  severity.yml  sops.yml  uri.yml  webhooks.yml
tests/fixtures/ast/: build.gradle.kts  fixture.c  fixture.cpp  fixture.cs  fixture.go  fixture.java  fixture.js  fixture.kts  fixture.lua  fixture.php  fixture.py  fixture.rb  fixture.scala  fixture.ts  fixture.vue
tests/fixtures/falsepositive/: deps.txt  keys.yml  semver.json
tests/integration/: test_whispers.py
tests/rules/: multiple.yml  valid.yml
tests/unit/: conftest.py  test_main.py  test_pairs.py  test_secrets.py  test_whispers.py
tests/unit/core/: test_args.py  test_config.py  test_log.py  test_pairs.py  test_printer.py  test_rules.py  test_scope.py  test_secrets.py  test_utils.py
tests/unit/models/: test_appconfig.py  test_pair.py  test_rule.py
tests/unit/plugins/: test_common.py  test_python.py  test_semgrep.py
whispers/: __init__.py  __version__.py  config.yml  main.py
whispers/core/: args.py  config.py  constants.py  log.py  pairs.py  printer.py  rules.py  scope.py  secrets.py  utils.py
whispers/models/: appconfig.py  pair.py  rule.py
whispers/plugins/: arn.py  common.py  config.py  dockercfg.py  dockerfile.py  elixir.py  gradle.py  html.py  htpasswd.py  jproperties.py  json.py  npmrc.py  pip.py  plaintext.py  pypirc.py  python.py  semgrep.py  shell.py  traverse.py  uri.py  xml.py  yml.py
whispers/rules/: apikey.yml  apikeys.yml  aws.yml  comment.yml  cors.yml  creditcard.yml  dangerous-functions.yml  files.yml  functions.yml  infra.yml  keys.yml  misc.yml  password.yml  passwords.yml  privatekey.yml  privatekeys.yml  python.yml  secret.yml  sensitive-files.yml  uri.yml  webhook.yml
